force-app/main/default/objects/Miscellaneous__c/Miscellaneous__c.object-meta.xml
<CustomObject>
    <label>Miscellaneous</label>
    <nameField>
        <displayFormat>MIS-{00000}</displayFormat>
        <label>Miscellaneous Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miscellaneous</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>