force-app/main/default/objects/Miscellaneous__c/fields/Total_Cost_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Formula__c</fullName>
    <formula>BLANKVALUE(Year_1_Cost__c, 0) +
BLANKVALUE(Year_2_Cost__c, 0) +
BLANKVALUE(Year_3_Cost__c, 0) +
BLANKVALUE(Year_4_Cost__c, 0) +
BLANKVALUE(Year_5_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>