force-app/main/default/objects/Miscellaneous__c/fields/Year_1_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Cost__c</fullName>
    <label>Year 1 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>