force-app/main/default/objects/Miscellaneous__c/fields/Year_5_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_5_Cost__c</fullName>
    <label>Year 5 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>